[package]
name = "islennyfree"
description = "A website to show if Lenny is currently free."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.9", features = ["derive"] }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
walkdir = "2.3.2"
